[package]
name = "babylon_epoching_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
library = []

[dependencies]
cosmos-sdk-proto = { version = "0.27", default-features = false, features = [
  "cosmwasm",
] }

prost = { version = "0.13.3", default-features = false, features = [
  "prost-derive",
] }
prost-types = { version = "0.13.3", default-features = false }
osmosis-std-derive = "0.26.0"
chrono = { version = "0.4.27", default-features = false }
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_1_4",
  "stargate",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
